@@ -48,7 +48,7 @@ public abstract class AsmetaCLI {
 			parser.parseArgument(args);
 			if (arguments.isEmpty())
 				throw new CmdLineException("No file is given" + Arrays.toString(args));
-			String asmPath = arguments.get(0);
+			String asmPath = arguments.getFirst();
 			if (asmPath.startsWith("/") || asmPath.startsWith("\\")) {
 				// TODO
 			}
@@ -109,8 +109,8 @@ public abstract class AsmetaCLI {
 			Appender app = (Appender) log.getAllAppenders().nextElement();			
 			// set the layout if necessary
 			Layout log4jlayout = app.getLayout();
-			if (log4jlayout instanceof PatternLayout) {
-				((PatternLayout) log4jlayout).setConversionPattern("%m%n");
+			if (log4jlayout instanceof PatternLayout layout) {
+				layout.setConversionPattern("%m%n");
 			}
 		}
 	}
